src/style.css
body {
  margin: 0;
  font-family: "Noto Sans";
}

 ::-webkit-scrollbar {
  width: 3px;
}

::-webkit-scrollbar-track {
  background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  background: #888;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
} 

.wrapper {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.taskbar {
  background-color: #2f4365;
  height: 5vh;
  justify-content: space-between;
  display: flex;
  position: relative;
}

.pdf-overlay {
  display: none;
  position: fixed;
  top: 10vh;
  left: 10vw;
  width: 80vw;
  height: 80vh;
  justify-content: center;
  align-items: center;
}

.pdf-overlay-window {
  background: #fff;
  width: 100%;
  height: 100%;
  border-radius: 11px;
  text-align: center;
  border: solid;
  border-width: thin;
  border-color: #64686b;
}

.info-overlay {
  display: flex;
  width: 35vw;
  height: 60vh;
  background-position: center;
  background-size: cover;
  background-image: url("./images/clippy.png");
  margin-left: 25vw;
  margin-top: 25vh;
}

.infoText {
  margin-left: 10vw;
  margin-top: 5px;
  text-align: left;
  overflow-wrap: break-word;
  width: 16vw;
  height: 24vh;
  overflow-y: scroll;
  overflow-x: hidden;
}

.explorer-overlay {
  display: none;
  position: fixed;
  top: 10vh;
  left: 10vw;
  width: 80vw;
  height: 80vh;
  justify-content: center;
  align-items: center;
}

.explorer-overlay-window {
  width: 80vw;
  height: 80vh;
  background-color: white;
  border-radius: 11px;
}

.explorer-overlay-grid {
  display: grid;
  height: 100%;
  width: 100%;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(6, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

.explorer-overlay-ribbon {
  grid-area: 1 / 1 / 2 / 9;
  background-color: #2a2e32;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-bottom-color: #64686b;
}
.explorer-overlay-navigationPane {
  grid-area: 2 / 1 / 7 / 3;
  background-color: #282e33;
  border-bottom-left-radius: 11px;
  border-right-style: solid;
  border-right-width: 2px;
  border-right-color: #64686b;
}
.explorer-overlay-content {
  grid-area: 2 / 3 / 7 / 9;
  background-color: #18191d;
  border-bottom-right-radius: 11px;
}

.overlay-content-topbar {
  height: 40px;
  width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  background-color: #2f4365;
  cursor: grab;
  display: flex;
  justify-content: space-between;
}

.closeButton {
  background-color: transparent;
  background-image: none;
  display: flex;
  border: 0px;
  color: white;
  cursor: pointer;
  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(112deg)
    brightness(104%) contrast(103%); /* source https://codepen.io/sosuke/pen/Pjoqqp, makes cross white */
}

.overlay-content-topbar-closebutton {
  display: flex;
}

.overlay-content-topbar-icon {
  text-align: left;
}

.overlay-content-topbar-icon img {
  height: 30px;
  margin-left: 7px;
  margin-top: 5px;
}

.pdf-overlay-content img {
  height: 35vh;
  width: auto;
}

.pdf-overlay-content {
  display: flex;
  flex-direction: row;
  margin: 20px;
}

.time {
  color: white;
  height: 5vh;
  width: 5vw;
  justify-content: center;
  align-content: center;
  display: flex;
  flex-wrap: wrap;
}

#display_time {
  font-size: 2vh;
}
#display_date {
  font-size: 1.7vh;
  margin-left: 5px;
}

.startMenuButton {
  width: 5vh;
  height: 5vh;
  border-right-style: solid;
  border-width: 2px;
}

.startMenuButton img {
  cursor: not-allowed;
  width: 90%;
  height: 90%;
  display: block;
  margin: auto;
}

.apps {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  max-height: 95vh;
  align-content: flex-start;
}

.icon {
  margin-top: 15px;
  margin-left: 15px;
  height: clamp(45px, 16.45vh, 160px);
  width: clamp(20px, 6.1vw, 160px);
  overflow: hidden;
  text-align: center;
  color: white;
  text-shadow: black 1px 1px 1px;
  font-size: 2vh;
  overflow-wrap: break-word;
  cursor: pointer;
}

.icon p {
  margin: 0px;
}

.icon img {
  align-self: center;
  height: clamp(5px, 8vh, 90px);
}

.desktop {
  height: 95vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-color: #114392;
  background-image: url("/images/background.svg");
}

